--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 ETH_NODE_URL=https://mainnet.infura.io/v3/512db91cbd224c23995ffc2481896889
+URL_API_COINGECKO=https://api.coingecko.com/api/v3/
+URL_ALLOW_CROSS=http://localhost:3000
